--- a/People.html
+++ b/People.html
@@ -27,37 +27,49 @@ Department: JCPenney Leadership Program<br>
 Office: Adams Hall Room 106<br>
 Phone: (405) 325-2501<br>
 E-mail: breea@ou.edu</strong></p>
-                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="card mb-3">
-                    <img src="card-image-2.jpg" class="card-img-top" alt="Card Image 2">
+                    <img src="https://www.ou.edu/content/price/contact_us/pricedirectory/_jcr_content/contentpar/textimage_95/image.img.jpg/1686850909471.jpg" class="card-img-top" alt="Card Image 2">
                     <div class="card-body">
-                        <h5 class="card-title">Card Title 2</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                        <h5 class="card-title"><strong>Melia Aldermank</strong></h5>
+                        <p class="card-text"><strong>Office Manager <br>
+
+Department: JCPenney Leadership Program<br>
+Office: Adams Hall Room 106<br>
+Phone: (405) 325-2501<br>
+E-mail: melia@ou.edu</strong></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="card mb-3">
-                    <img src="card-image-3.jpg" class="card-img-top" alt="Card Image 3">
+                    <img src="https://www.ou.edu/content/price/jcpl/people/_jcr_content/contentpar/textimage_copy/image.img.jpg/1639685074558.jpg" class="card-img-top" alt="Card Image 3">
                     <div class="card-body">
-                        <h5 class="card-title">Card Title 3</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                        <h5 class="card-title"><strong>Lauren Burch</strong></h5>
+                        <p class="card-text"><strong>Office Fellow <br>
+
+Department: JCPenney Leadership Program<br>
+Office: Adams Hall Room 106<br>
+Phone: (405) 325-2501<br>
+E-mail: laurenburch@ou.edu</strong></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="card mb-3">
-                    <img src="card-image-4.jpg" class="card-img-top" alt="Card Image 4">
+                    <img src="https://www.ou.edu/content/price/jcpl/people/_jcr_content/contentpar/textimage/image.img.jpg/1639688850769.jpg" class="card-img-top" alt="Card Image 4">
                     <div class="card-body">
-                        <h5 class="card-title">Card Title 4</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                        <h5 class="card-title"><strong>Carson Poupore</strong></h5>
+                        <p class="card-text"><strong>Office Fellow <br>
+
+Department: JCPenney Leadership Program<br>
+Office: Adams Hall Room 106<br>
+Phone: (405) 325-2501<br>
+E-mail: carson@ou.edu</strong></p>
                     </div>
                 </div>
             </div>
@@ -72,4 +84,4 @@ E-mail: breea@ou.edu</strong></p>
 
 
 
-https://images.squarespace-cdn.com/content/v1/570815def8baf3b9cbdcc796/1473868874192-RMSZ1ILRLMATRLHJLQPG/F7J2304.jpg
+
